--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
@@ -15,7 +14,9 @@
     <string name="games_i_ve_played">Games I\'ve played</string>
     <string name="add_game">add game</string>
     <string name="log_out_of_account">Log out of account</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menu_user_profile">menu user profile</string>
+    <string name="name">name</string>
+    <string name="profile_image_description">Descrição da imagem de perfil</string>
+    <string name="change_profile_image">Alterar imagem de perfil</string>
 </resources>
